--- a/index.html
+++ b/index.html
@@ -4,23 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <button>App Academy</button>
-      <button>Sign In</button>
+      <div class="header--btn">
+        <button type="reset">App Academy</button>
+        <button type="button">Sign In</button>
+      </div>
       <nav>
-        <ul>
-          <li>Home</li>
-          <li>News</li>
-          <li>Updates</li>
-          <li>More</li>
+        <ul class="nav--ul">
+          <li>home</li>
+          <li>news</li>
+          <li>updates</li>
+          <li>more</li>
         </ul>
       </nav>
     </header>
     <main>
-      <p>Lorem Ipsum</p>
+      <p class="main--text">
+        Lorem Ipsum dolor sit amet, consectetur adispiscing elit, sed do
+      </p>
       <div>
         <span>By Author:</span>
         <a>F</a>
