Apply CSS styling to all elements  of the HTML file

--- a/index.html
+++ b/index.html
@@ -23,51 +23,67 @@
       </nav>
     </header>
     <main>
-      <p class="main--text">
+      <p class="p--text">
         Lorem Ipsum dolor sit amet, consectetur adispiscing elit, sed do
       </p>
-      <div>
-        <span>By Author:</span>
-        <a>F</a>
-        <a>t</a>
-        <a>Share</a>
-      </div>
-      <div>
-        <img src="#" alt="#" />
-      </div>
-      <div>
-        <h2>The Lore</h2>
-        <p>lorem impsun dolor sit amet</p>
-        <h2>The Lore</h2>
-        <p>lorem impsun dolor sit amet</p>
-      </div>
-      <div>
+      <div class="text--references">
+        <div>By Author</div>
         <div>
-          <h3>More Info</h3>
-          <ul>
-            <li><a>The art</a></li>
-            <li><a>While</a></li>
-            <li><a>A Loop</a></li>
-            <li><a>Loopception</a></li>
-            <li><a>Arrays</a></li>
+          <a class="facebook--icon">f</a>
+          <a class="twitter--icon">t</a>
+          <a class="share--icon">share</a>
+        </div>
+      </div>
+      <div class="main--image">
+        <img src="img-placeholder.png" alt="default image" />
+      </div>
+      <div class="main--text">
+        <h5 class="heading--fifth">The Lore:</h5>
+        <p class="main--text--p">
+          Lorem impsun dolor sit amer, consectetur adipiscing elit sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquio ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum do.
+        </p>
+        <h5 class="heading--fifth">The Lore:</h5>
+        <p class="main--text--p">
+          Lorem impsun dolor sit amer, consectetur adipiscing elit sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquio ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum do.
+        </p>
+      </div>
+      <div class="links--container">
+        <div>
+          <h3 class="link--heading">More Info iterative</h3>
+          <ul class="ul--container">
+            <li><a class="link--item" href="#">The art</a></li>
+            <li><a class="link--item">While</a></li>
+            <li><a class="link--item">A Loop</a></li>
+            <li><a class="link--item">Loopception</a></li>
+            <li><a class="link--item">Arrays</a></li>
           </ul>
         </div>
         <div>
-          <h3>Recursive</h3>
-          <ul>
-            <li><a>The art</a></li>
-            <li><a>While</a></li>
-            <li><a>A Loop</a></li>
-            <li><a>Loopception</a></li>
-            <li><a>Arrays</a></li>
+          <h3 class="link--heading">recursive</h3>
+          <ul class="ul--container">
+            <li><a class="link--item">The art</a></li>
+            <li><a class="link--item">While</a></li>
+            <li><a class="link--item">A Loop</a></li>
+            <li><a class="link--item">Loopception</a></li>
+            <li><a class="link--item">Arrays</a></li>
           </ul>
         </div>
       </div>
     </main>
-    <footer>
+    <footer class="footer">
       <div>
-        <img />
-        <ul>
+        <img class="logo" src="logo.png" alt="app-academy" />
+      </div>
+      <div>
+        <ul class="ul--footer">
           <li>Contact</li>
           <li>About Us</li>
           <li>Term of Use</li>
